[project]
name = "mend-reporting-tool"
version = "0.1.0"
description = "This is script to generate reports through Mend API v3.0"
readme = "README.md"
requires-python = ">=3.12"
maintainers = [
  {name = "Alexander Chelyshev", email = "alexchelyshev@gmail.com"}
]
dependencies = [
    "requests>=2.33.1",
]
[project.scripts]
mend-reporting-tool = "mend_reporting_tool.main:main"
